# edl-solution

./: .env.example  .gitignore  404.html  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  README.md  RENDER_DATABASE_SETUP_GUIDE.md  app.py  calculator.py  index.html  main.py  mkdocs.yml  pyproject.toml  render.yaml  test_calculator.py  test_weather_api.py  workshop.md
.claude/: settings.local.json
.github/workflows/: backend-split.yml  backend-test.yml  backend.yml  ci-pipeline.yml  ci.yml  frontend-chain.yml  frontend.yml  java.yml  test.yml
TP-1/: index.html
TP-2/: index.html
TP-3/: index.html
archive/docs/: TP1-weather-api.md
backend/: .env.example  README.md  pyproject.toml  render.yaml
backend/src/: app.py  config.py  database.py  db_init.py  models.py
backend/tests/: conftest.py  test_api.py
calculator/: README.md  calculator.py  pyproject.toml  test_calculator.py
docs/: ATELIER-1.md  ATELIER-2.md  ATELIER-3.md  TP0-example.md  TP1-weather-api.md  index.md  setup-guide.md  starting-example.md  workshop-1-backend.md  workshop-2-frontend.md  workshop-3-database.md  workshop-3-production.md
edl-starter/backend/tests/: test_api.py
frontend/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/frontend/src/: App.test.tsx  App.tsx
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: api.test.ts  api.ts
frontend/src/components/: KanbanBoard.tsx  (+4 more)
java-exercises/: README.md
java-exercises/calculs-geo/: Perimetre.java  Produit.java  Surface.java
java-exercises/money/: Money.java
scripts/: README.md  generate-pdf-atelier2.js  generate-pdf-atelier3.js  generate-pdf-tp1.js  generate-pdf-tp2.js  generate-pdf-tp3.js  generate-pdf.js  package-lock.json  package.json
(+4 files in other folders)
