[project]
name = "taskflow-backend"
version = "0.1.0"
description = "TaskFlow backend - FastAPI task management service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2", # For external API calls
    "sqlalchemy>=2.0.23",  # ORM for database
    "psycopg2-binary>=2.9.9",  # PostgreSQL driver
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "responses>=0.24.1",  # Mock HTTP responses
    "faker>=20.1.0",     # Generate fake test data
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",  # Lowered from 90 due to database integration
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/database.py",    # Introduced in Atelier 3
    "src/models.py",      # Introduced in Atelier 3
    "src/db_init.py",     # Introduced in Atelier 3
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
